force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsimportleads__c.field-meta.xml
<CustomField>
    <fullName>permissionsimportleads__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsimportleads</externalDeveloperName>
    <label>Import Leads</label>
    <type>Checkbox</type>
</CustomField>