force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsimportpersonal__c.field-meta.xml
<CustomField>
    <fullName>permissionsimportpersonal__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsimportpersonal</externalDeveloperName>
    <label>Import Personal Contacts</label>
    <type>Checkbox</type>
</CustomField>