force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightsappadmin__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightsappadmin__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightsappadmin</externalDeveloperName>
    <label>Manage Analytics</label>
    <type>Checkbox</type>
</CustomField>