force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightsappdashboardeditor__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightsappdashboardeditor__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightsappdashboardeditor</externalDeveloperName>
    <label>Create and Edit Analytics Dashboards</label>
    <type>Checkbox</type>
</CustomField>