force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightsappelteditor__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightsappelteditor__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightsappelteditor</externalDeveloperName>
    <label>Edit Analytics Dataflows</label>
    <type>Checkbox</type>
</CustomField>