force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightsappuploaduser__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightsappuploaduser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightsappuploaduser</externalDeveloperName>
    <label>Upload External Data to Analytics</label>
    <type>Checkbox</type>
</CustomField>