force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightsappuser__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightsappuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightsappuser</externalDeveloperName>
    <label>Use Analytics</label>
    <type>Checkbox</type>
</CustomField>