force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinsightscreateapplication__c.field-meta.xml
<CustomField>
    <fullName>permissionsinsightscreateapplication__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinsightscreateapplication</externalDeveloperName>
    <label>Create Analytics Apps</label>
    <type>Checkbox</type>
</CustomField>