force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsinstallmultiforce__c.field-meta.xml
<CustomField>
    <fullName>permissionsinstallmultiforce__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsinstallmultiforce</externalDeveloperName>
    <label>Download AppExchange Packages</label>
    <type>Checkbox</type>
</CustomField>