force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsiotuser__c.field-meta.xml
<CustomField>
    <fullName>permissionsiotuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsiotuser</externalDeveloperName>
    <label>IoT User</label>
    <type>Checkbox</type>
</CustomField>