force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionslightningconsoleallowedforuse__c.field-meta.xml
<CustomField>
    <fullName>permissionslightningconsoleallowedforuse__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionslightningconsoleallowedforuser</externalDeveloperName>
    <label>Lightning Console User</label>
    <type>Checkbox</type>
</CustomField>