force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionslightningexperienceuser__c.field-meta.xml
<CustomField>
    <fullName>permissionslightningexperienceuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionslightningexperienceuser</externalDeveloperName>
    <label>Lightning Experience User</label>
    <type>Checkbox</type>
</CustomField>