force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionslistemailsend__c.field-meta.xml
<CustomField>
    <fullName>permissionslistemailsend__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionslistemailsend</externalDeveloperName>
    <label>Allow sending of List Emails</label>
    <type>Checkbox</type>
</CustomField>