force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsltngpromoreserved01userperm__c.field-meta.xml
<CustomField>
    <fullName>permissionsltngpromoreserved01userperm__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsltngpromoreserved01userperm</externalDeveloperName>
    <label>Remain in Salesforce Classic</label>
    <type>Checkbox</type>
</CustomField>