force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageanalyticsnapshots__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageanalyticsnapshots__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageanalyticsnapshots</externalDeveloperName>
    <label>Manage Reporting Snapshots</label>
    <type>Checkbox</type>
</CustomField>