force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageauthproviders__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageauthproviders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageauthproviders</externalDeveloperName>
    <label>Manage Auth. Providers</label>
    <type>Checkbox</type>
</CustomField>