force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagebusinesshourholidays__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagebusinesshourholidays__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagebusinesshourholidays</externalDeveloperName>
    <label>Manage Business Hours Holidays</label>
    <type>Checkbox</type>
</CustomField>