force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecallcenters__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecallcenters__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecallcenters</externalDeveloperName>
    <label>Manage Call Centers</label>
    <type>Checkbox</type>
</CustomField>