force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecases__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecases__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecases</externalDeveloperName>
    <label>Manage Cases</label>
    <type>Checkbox</type>
</CustomField>