force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecategories__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecategories__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecategories</externalDeveloperName>
    <label>Manage Categories</label>
    <type>Checkbox</type>
</CustomField>