force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecertificates__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecertificates__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecertificates</externalDeveloperName>
    <label>Manage Certificates</label>
    <type>Checkbox</type>
</CustomField>