force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagechattermessages__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagechattermessages__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagechattermessages</externalDeveloperName>
    <label>Manage Chatter Messages and Direct Messa</label>
    <type>Checkbox</type>
</CustomField>