force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecontentpermissions__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecontentpermissions__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecontentpermissions</externalDeveloperName>
    <label>Manage Content Permissions</label>
    <type>Checkbox</type>
</CustomField>