force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecontentproperties__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecontentproperties__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecontentproperties</externalDeveloperName>
    <label>Manage Content Properties</label>
    <type>Checkbox</type>
</CustomField>