force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecontenttypes__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecontenttypes__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecontenttypes</externalDeveloperName>
    <label>Manage record types and layouts for File</label>
    <type>Checkbox</type>
</CustomField>