force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecustompermissions__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecustompermissions__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecustompermissions</externalDeveloperName>
    <label>Manage Custom Permissions</label>
    <type>Checkbox</type>
</CustomField>