force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagecustomreporttypes__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagecustomreporttypes__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagecustomreporttypes</externalDeveloperName>
    <label>Manage Custom Report Types</label>
    <type>Checkbox</type>
</CustomField>