force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagedashbdsinpubfolders__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagedashbdsinpubfolders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagedashbdsinpubfolders</externalDeveloperName>
    <label>Manage Dashboards in Public Folders</label>
    <type>Checkbox</type>
</CustomField>