force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagedatacategories__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagedatacategories__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagedatacategories</externalDeveloperName>
    <label>Manage Data Categories</label>
    <type>Checkbox</type>
</CustomField>