force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagedataintegrations__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagedataintegrations__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagedataintegrations</externalDeveloperName>
    <label>Manage Data Integrations</label>
    <type>Checkbox</type>
</CustomField>