force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagedynamicdashboards__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagedynamicdashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagedynamicdashboards</externalDeveloperName>
    <label>Manage Dynamic Dashboards</label>
    <type>Checkbox</type>
</CustomField>