force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageemailclientconfig__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageemailclientconfig__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageemailclientconfig</externalDeveloperName>
    <label>Manage Email Client Configurations</label>
    <type>Checkbox</type>
</CustomField>