force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageencryptionkeys__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageencryptionkeys__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageencryptionkeys</externalDeveloperName>
    <label>Manage Encryption Keys</label>
    <type>Checkbox</type>
</CustomField>