force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageexchangeconfig__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageexchangeconfig__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageexchangeconfig</externalDeveloperName>
    <label>Manage Lightning Sync</label>
    <type>Checkbox</type>
</CustomField>