force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagehealthcheck__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagehealthcheck__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagehealthcheck</externalDeveloperName>
    <label>Manage Health Check</label>
    <type>Checkbox</type>
</CustomField>