force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageinteraction__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageinteraction__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageinteraction</externalDeveloperName>
    <label>Manage Flow</label>
    <type>Checkbox</type>
</CustomField>