force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageinternalusers__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageinternalusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageinternalusers</externalDeveloperName>
    <label>Manage Internal Users</label>
    <type>Checkbox</type>
</CustomField>