force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageipaddresses__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageipaddresses__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageipaddresses</externalDeveloperName>
    <label>Manage IP Addresses</label>
    <type>Checkbox</type>
</CustomField>