force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageknowledge__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageknowledge</externalDeveloperName>
    <label>Manage Salesforce Knowledge</label>
    <type>Checkbox</type>
</CustomField>