force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageknowledgeimportexport__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageknowledgeimportexport__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageknowledgeimportexport</externalDeveloperName>
    <label>Manage Knowledge Article Import/Export</label>
    <type>Checkbox</type>
</CustomField>