force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageleads__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageleads__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageleads</externalDeveloperName>
    <label>Manage Leads</label>
    <type>Checkbox</type>
</CustomField>