force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageloginaccesspolicies__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageloginaccesspolicies__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageloginaccesspolicies</externalDeveloperName>
    <label>Manage Login Access Policies</label>
    <type>Checkbox</type>
</CustomField>