force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagemobile__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagemobile__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagemobile</externalDeveloperName>
    <label>Manage Mobile Configurations</label>
    <type>Checkbox</type>
</CustomField>