force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagenetworks__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagenetworks__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagenetworks</externalDeveloperName>
    <label>Create and Set Up Communities</label>
    <type>Checkbox</type>
</CustomField>