force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagepasswordpolicies__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagepasswordpolicies__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagepasswordpolicies</externalDeveloperName>
    <label>Manage Password Policies</label>
    <type>Checkbox</type>
</CustomField>