force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageprofilespermissionsets__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageprofilespermissionsets__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageprofilespermissionsets</externalDeveloperName>
    <label>Manage Profiles and Permission Sets</label>
    <type>Checkbox</type>
</CustomField>