force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagepvtrptsanddashbds__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagepvtrptsanddashbds__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagepvtrptsanddashbds</externalDeveloperName>
    <label>Manage All Private Reports and Dashboard</label>
    <type>Checkbox</type>
</CustomField>