force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageremoteaccess__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageremoteaccess__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageremoteaccess</externalDeveloperName>
    <label>Manage Connected Apps</label>
    <type>Checkbox</type>
</CustomField>