force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagereportsinpubfolders__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagereportsinpubfolders__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagereportsinpubfolders</externalDeveloperName>
    <label>Manage Reports in Public Folders</label>
    <type>Checkbox</type>
</CustomField>