force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageroles__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageroles__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageroles</externalDeveloperName>
    <label>Manage Roles</label>
    <type>Checkbox</type>
</CustomField>