force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesearchpromotionrules__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesearchpromotionrules__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesearchpromotionrules</externalDeveloperName>
    <label>Manage Promoted Search Terms</label>
    <type>Checkbox</type>
</CustomField>