force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesessionpermissionsets__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesessionpermissionsets__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesessionpermissionsets</externalDeveloperName>
    <label>Manage Session Permission Set Activation</label>
    <type>Checkbox</type>
</CustomField>