force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesharing__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesharing__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesharing</externalDeveloperName>
    <label>Manage Sharing</label>
    <type>Checkbox</type>
</CustomField>