force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesolutions__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesolutions__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesolutions</externalDeveloperName>
    <label>Manage Published Solutions</label>
    <type>Checkbox</type>
</CustomField>