force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesurveys__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesurveys__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesurveys</externalDeveloperName>
    <label>Manage Surveys</label>
    <type>Checkbox</type>
</CustomField>