force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagesynonyms__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagesynonyms__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagesynonyms</externalDeveloperName>
    <label>Manage Synonyms</label>
    <type>Checkbox</type>
</CustomField>