force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagetemplatedapp__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagetemplatedapp__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagetemplatedapp</externalDeveloperName>
    <label>Manage Analytics Templated Apps</label>
    <type>Checkbox</type>
</CustomField>