force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanagetwofactor__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanagetwofactor__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanagetwofactor</externalDeveloperName>
    <label>Manage Two-Factor Authentication in API</label>
    <type>Checkbox</type>
</CustomField>