force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageunlistedgroups__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageunlistedgroups__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageunlistedgroups</externalDeveloperName>
    <label>Manage Unlisted Groups</label>
    <type>Checkbox</type>
</CustomField>