force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmanageusers__c.field-meta.xml
<CustomField>
    <fullName>permissionsmanageusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmanageusers</externalDeveloperName>
    <label>Manage Users</label>
    <type>Checkbox</type>
</CustomField>