force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmassinlineedit__c.field-meta.xml
<CustomField>
    <fullName>permissionsmassinlineedit__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmassinlineedit</externalDeveloperName>
    <label>Mass Edits from Lists</label>
    <type>Checkbox</type>
</CustomField>