force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmergetopics__c.field-meta.xml
<CustomField>
    <fullName>permissionsmergetopics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmergetopics</externalDeveloperName>
    <label>Merge Topics</label>
    <type>Checkbox</type>
</CustomField>