force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmoderatechatter__c.field-meta.xml
<CustomField>
    <fullName>permissionsmoderatechatter__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmoderatechatter</externalDeveloperName>
    <label>Moderate Chatter</label>
    <type>Checkbox</type>
</CustomField>