force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmoderatenetworkusers__c.field-meta.xml
<CustomField>
    <fullName>permissionsmoderatenetworkusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmoderatenetworkusers</externalDeveloperName>
    <label>Moderate Community Users</label>
    <type>Checkbox</type>
</CustomField>