force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmodifyalldata__c.field-meta.xml
<CustomField>
    <fullName>permissionsmodifyalldata__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmodifyalldata</externalDeveloperName>
    <label>Modify All Data</label>
    <type>Checkbox</type>
</CustomField>