force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmodifymetadata__c.field-meta.xml
<CustomField>
    <fullName>permissionsmodifymetadata__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmodifymetadata</externalDeveloperName>
    <label>Modify Metadata (Beta if enabled without</label>
    <type>Checkbox</type>
</CustomField>