force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsmodifysecureagents__c.field-meta.xml
<CustomField>
    <fullName>permissionsmodifysecureagents__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsmodifysecureagents</externalDeveloperName>
    <label>Modify Secure Agents</label>
    <type>Checkbox</type>
</CustomField>