force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsnewreportbuilder__c.field-meta.xml
<CustomField>
    <fullName>permissionsnewreportbuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsnewreportbuilder</externalDeveloperName>
    <label>Report Builder</label>
    <type>Checkbox</type>
</CustomField>