force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsoptoutgeolocationtracking__c.field-meta.xml
<CustomField>
    <fullName>permissionsoptoutgeolocationtracking__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsoptoutgeolocationtracking</externalDeveloperName>
    <label>Exclude Technician from Geolocation Trac</label>
    <type>Checkbox</type>
</CustomField>