force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionspackaging2__c.field-meta.xml
<CustomField>
    <fullName>permissionspackaging2__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionspackaging2</externalDeveloperName>
    <label>Create and Update Second-Generation Pack</label>
    <type>Checkbox</type>
</CustomField>