force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionspasswordneverexpires__c.field-meta.xml
<CustomField>
    <fullName>permissionspasswordneverexpires__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionspasswordneverexpires</externalDeveloperName>
    <label>Password Never Expires</label>
    <type>Checkbox</type>
</CustomField>