force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionspreventclassicexperience__c.field-meta.xml
<CustomField>
    <fullName>permissionspreventclassicexperience__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionspreventclassicexperience</externalDeveloperName>
    <label>Hide Option to Switch to Salesforce Clas</label>
    <type>Checkbox</type>
</CustomField>