force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsprivacydataaccess__c.field-meta.xml
<CustomField>
    <fullName>permissionsprivacydataaccess__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsprivacydataaccess</externalDeveloperName>
    <label>Allow user to access privacy data</label>
    <type>Checkbox</type>
</CustomField>