force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsrecordvisibilityapi__c.field-meta.xml
<CustomField>
    <fullName>permissionsrecordvisibilityapi__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsrecordvisibilityapi</externalDeveloperName>
    <label>Enable RecordVisibility API</label>
    <type>Checkbox</type>
</CustomField>