force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsremovedirectmessagemembers__c.field-meta.xml
<CustomField>
    <fullName>permissionsremovedirectmessagemembers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsremovedirectmessagemembers</externalDeveloperName>
    <label>Remove People from Direct Messages</label>
    <type>Checkbox</type>
</CustomField>