force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsresetpasswords__c.field-meta.xml
<CustomField>
    <fullName>permissionsresetpasswords__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsresetpasswords</externalDeveloperName>
    <label>Reset User Passwords and Unlock Users</label>
    <type>Checkbox</type>
</CustomField>