force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsrunflow__c.field-meta.xml
<CustomField>
    <fullName>permissionsrunflow__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsrunflow</externalDeveloperName>
    <label>Run Flows</label>
    <type>Checkbox</type>
</CustomField>