force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsrunreports__c.field-meta.xml
<CustomField>
    <fullName>permissionsrunreports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsrunreports</externalDeveloperName>
    <label>Run Reports</label>
    <type>Checkbox</type>
</CustomField>