force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssalesconsole__c.field-meta.xml
<CustomField>
    <fullName>permissionssalesconsole__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssalesconsole</externalDeveloperName>
    <label>Sales Console</label>
    <type>Checkbox</type>
</CustomField>