force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsschedulereports__c.field-meta.xml
<CustomField>
    <fullName>permissionsschedulereports__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsschedulereports</externalDeveloperName>
    <label>Schedule Reports</label>
    <type>Checkbox</type>
</CustomField>