force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsselectfilesfromsalesforce__c.field-meta.xml
<CustomField>
    <fullName>permissionsselectfilesfromsalesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsselectfilesfromsalesforce</externalDeveloperName>
    <label>Select Files from Salesforce</label>
    <type>Checkbox</type>
</CustomField>