force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssendannouncementemails__c.field-meta.xml
<CustomField>
    <fullName>permissionssendannouncementemails__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssendannouncementemails</externalDeveloperName>
    <label>Send announcement emails</label>
    <type>Checkbox</type>
</CustomField>