force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssendexternalemailavailable__c.field-meta.xml
<CustomField>
    <fullName>permissionssendexternalemailavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssendexternalemailavailable</externalDeveloperName>
    <label>Send Email through External Email Servic</label>
    <type>Checkbox</type>
</CustomField>