force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssendsitrequests__c.field-meta.xml
<CustomField>
    <fullName>permissionssendsitrequests__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssendsitrequests</externalDeveloperName>
    <label>Send Stay-in-Touch Requests</label>
    <type>Checkbox</type>
</CustomField>