force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsshareinternalarticles__c.field-meta.xml
<CustomField>
    <fullName>permissionsshareinternalarticles__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsshareinternalarticles</externalDeveloperName>
    <label>Share internal Knowledge articles extern</label>
    <type>Checkbox</type>
</CustomField>