force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionsshowcompanynameasuserbadge__c.field-meta.xml
<CustomField>
    <fullName>permissionsshowcompanynameasuserbadge__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionsshowcompanynameasuserbadge</externalDeveloperName>
    <label>Show Company Name as Community Role</label>
    <type>Checkbox</type>
</CustomField>