force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssolutionimport__c.field-meta.xml
<CustomField>
    <fullName>permissionssolutionimport__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssolutionimport</externalDeveloperName>
    <label>Import Solutions</label>
    <type>Checkbox</type>
</CustomField>