force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubmitmacrosallowed__c.field-meta.xml
<CustomField>
    <fullName>permissionssubmitmacrosallowed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubmitmacrosallowed</externalDeveloperName>
    <label>Manage Macros Users Can&#39;t Undo</label>
    <type>Checkbox</type>
</CustomField>