force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubscribedashboardtootheruser__c.field-meta.xml
<CustomField>
    <fullName>permissionssubscribedashboardtootheruser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubscribedashboardtootherusers</externalDeveloperName>
    <label>Subscribe to Dashboards: Add Recipients</label>
    <type>Checkbox</type>
</CustomField>