force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubscribereportsrunasuser__c.field-meta.xml
<CustomField>
    <fullName>permissionssubscribereportsrunasuser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubscribereportsrunasuser</externalDeveloperName>
    <label>Subscribe to Reports: Set Running User</label>
    <type>Checkbox</type>
</CustomField>