force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubscribereporttootherusers__c.field-meta.xml
<CustomField>
    <fullName>permissionssubscribereporttootherusers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubscribereporttootherusers</externalDeveloperName>
    <label>Subscribe to Reports: Add Recipients</label>
    <type>Checkbox</type>
</CustomField>