force-app/main/default/objects/ImpossibleProfiles__x/fields/permissionssubscribetolightningdashboard__c.field-meta.xml
<CustomField>
    <fullName>permissionssubscribetolightningdashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>permissionssubscribetolightningdashboards</externalDeveloperName>
    <label>Subscribe to Dashboards</label>
    <type>Checkbox</type>
</CustomField>